tried to fix modal position on createPatient, fixed iframe border on home page to subtract the width of the scrollbar on the side and adjust whenever the window is resized

--- a/frontend/src/css/createPatientStyles.css
+++ b/frontend/src/css/createPatientStyles.css
@@ -51,11 +51,11 @@ background: rgba(0, 0, 0, 0.6); /* Semi-transparent black */
 z-index: 999;
 }
 
-/* Modal box */
+/* Modal box NEED TO MESS WITH POSITIONING ON THE WINDOW TO MAKE IT MOVE WITH SCROLL -KW */
 #modal {
-position: fixed;
-top: 50%;
-left: 50%;
+position: relative;
+top: 50vh;
+left: 50vw;
 transform: translate(-50%, -50%);
 background: white;
 padding: 20px;
